<resources>
    <string name="app_name">EasyBill</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_account">账户管理</string>
    <string name="title_activity_category">分类管理</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_more">更多</string>
    <string name="title_activity_change_account">添加账户</string>

    <string name="account_spinner_add_prompt">请选择</string>
    <string name="cate_spinner_attribute_prompt">请选择属性</string>
    <string name="cate_spinner_ico_prompt">请选择图标</string>

    <string name="report_main">图表</string>
    <string name="noti_msg">通知消息</string>
    <string name="friends_list">好友列表</string>
    <string name="all_list">全部列表</string>

    <!-- 登陆注册-->
    <string name="forget_pwd">忘记密码</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="login_in">登陆</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="PHONENUM">phoneNum</string>
    <!-- 登陆注册-->

    <!--语音部分-->
    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">56ef6284</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>
    <!--语音部分-->
</resources>
