<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">
    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/head"
        android:src="@drawable/portrait" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/head"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
                <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
                <EditText
                    android:id="@+id/edt_account"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/account"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:layout_marginTop="23dp"
                    android:textColorHint="#999999"
                    android:textSize="18sp" >
                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/login_more_user"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="23dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/up" />
            </LinearLayout>

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/edt_psw"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:id="@+id/cb_remember"
            android:checked="false" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login_in"
            android:background="@drawable/login_button"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tv_findPswPh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:textColor="#1CB9EE"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#1CB9EE"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"/>
</RelativeLayout>